<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fundo"
    android:orientation="vertical"
    tools:context=".AtividadePrincipal">

    <Switch
        android:id="@+id/sw_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/texto"
        android:text="Modo Noturno" />

    <Button
        android:id="@+id/btn_Listar_livros"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/botao"
        android:fontFamily="@font/buenard"
        android:gravity="center"
        android:text="@string/btn_consulta"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:fontFamily="@font/buenard"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cadastro"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:fontFamily="@font/buenard"
            android:gravity="center"
            android:text="@string/btn_cadastro"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>