<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/back"
    android:orientation="vertical"
    tools:context=".TelaUsuario"
    android:background="@drawable/background_fundo">

    <Button
        android:id="@+id/btn_sair"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:textColor="@color/texto"
        android:text="@string/btn_sair" />

    <TextView
        android:id="@+id/nomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Nome Usuario"
        android:textColor="#FFFFFFFF"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/emailUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Nome Usuario"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_livros_reservados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:fontFamily="@font/buenard"
            android:text="@string/btn_livros_reservados"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_Listar_livros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:fontFamily="@font/buenard"
            android:text="@string/btn_consulta"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>